--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^3.3.7",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
-    }
+        "node-sass": "^4.9.2",
+        "popper.js": "^1.12",
+        "sass-loader": "^7.1.0",
+        "vue": "^2.5.7",
+        "webpack": "^4.16.4",
+        "webpack-cli": "^3.1.0"
+    },
+    "dependencies": {}
 }
