--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "kalnoy/nestedset": "^4.3",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "paypal/rest-api-sdk-php": "*",
         "spatie/laravel-permission": "^2.12"
     },
     "require-dev": {
