--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "paypal/rest-api-sdk-php": "*",
-        "spatie/laravel-permission": "^2.12"
+        "shippo/shippo-php": "^1.4",
+        "spatie/laravel-permission": "^2.12",
+        "stripe/stripe-php": "^6.15"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
